test/mutation_analysis/s0032_longest_valid_parentheses/hafis/o3/mutants/2/result.txt
./test/mutation_analysis/s0032_longest_valid_parentheses/hafis/o3/mutants/2/Solution.java:22: error: unreachable statement
        for (int i = 0; false; i++) {
                                    ^
1 error
